// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Nav should display active link when route matches 1`] = `
.c0 {
  margin: 0;
  display: block;
}

.c1 {
  padding: 1em 1.5em;
  display: inline-block;
  cursor: pointer;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #4A4A4A;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
  text-decoration: none;
  border-color: rgba(5,108,153,0);
  border-style: solid;
  border-width: 0 0 2px 0;
}

.c1:hover {
  color: #056C99;
}

.c1.c2 {
  color: #056C99;
  border-color: rgba(5,108,153,1);
}

<NavWithoutRouter
  match={
    Object {
      "params": Object {
        "sectionId": "888",
      },
      "path": "",
      "url": "",
    }
  }
  questionnaire={
    Object {
      "id": 1,
      "sections": Array [
        Object {
          "id": 2,
          "pages": Array [
            Object {
              "id": 3,
            },
          ],
          "title": "Section 1",
        },
      ],
      "title": "Questionnaire",
    }
  }
>
  <Nav__StyledNav>
    <nav
      className="c0"
    >
      <Nav__StyledNavLink
        activeClassName="c2"
        to="/questionnaire/1/meta"
      >
        <NavLink
          activeClassName="c2"
          className="c1"
          to="/questionnaire/1/meta"
        >
          <Route
            path="/questionnaire/1/meta"
          >
            <Link
              className="c1"
              replace={false}
              to="/questionnaire/1/meta"
            >
              <a
                className="c1"
                href="/questionnaire/1/meta"
                onClick={[Function]}
              >
                Questionnaire meta
              </a>
            </Link>
          </Route>
        </NavLink>
      </Nav__StyledNavLink>
      <Nav__StyledNavLink
        activeClassName="c2"
        isActive={[Function]}
        to="/questionnaire/1/design/2/3"
      >
        <NavLink
          activeClassName="c2"
          className="c1"
          isActive={[Function]}
          to="/questionnaire/1/design/2/3"
        >
          <Route
            path="/questionnaire/1/design/2/3"
          >
            <Link
              className="c2 c1"
              replace={false}
              style={Object {}}
              to="/questionnaire/1/design/2/3"
            >
              <a
                className="c2 c1"
                href="/questionnaire/1/design/2/3"
                onClick={[Function]}
                style={Object {}}
              >
                Builder
              </a>
            </Link>
          </Route>
        </NavLink>
      </Nav__StyledNavLink>
    </nav>
  </Nav__StyledNav>
</NavWithoutRouter>
`;

exports[`components/Nav should render Nav 1`] = `
.c0 {
  margin: 0;
  display: block;
}

.c1 {
  padding: 1em 1.5em;
  display: inline-block;
  cursor: pointer;
  font-size: 0.875em;
  font-weight: 400;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #4A4A4A;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
  text-decoration: none;
  border-color: rgba(5,108,153,0);
  border-style: solid;
  border-width: 0 0 2px 0;
}

.c1:hover {
  color: #056C99;
}

.c1.selected {
  color: #056C99;
  border-color: rgba(5,108,153,1);
}

<NavWithoutRouter
  match={
    Object {
      "params": Object {},
      "path": "",
      "url": "",
    }
  }
  questionnaire={
    Object {
      "id": 1,
      "sections": Array [
        Object {
          "id": 2,
          "pages": Array [
            Object {
              "id": 3,
            },
          ],
          "title": "Section 1",
        },
      ],
      "title": "Questionnaire",
    }
  }
>
  <Nav__StyledNav>
    <nav
      className="c0"
    >
      <Nav__StyledNavLink
        activeClassName="selected"
        to="/questionnaire/1/meta"
      >
        <NavLink
          activeClassName="selected"
          className="c1"
          to="/questionnaire/1/meta"
        >
          <Route
            path="/questionnaire/1/meta"
          >
            <Link
              className="c1"
              replace={false}
              to="/questionnaire/1/meta"
            >
              <a
                className="c1"
                href="/questionnaire/1/meta"
                onClick={[Function]}
              >
                Questionnaire meta
              </a>
            </Link>
          </Route>
        </NavLink>
      </Nav__StyledNavLink>
      <Nav__StyledNavLink
        activeClassName="selected"
        isActive={[Function]}
        to="/questionnaire/1/design/2/3"
      >
        <NavLink
          activeClassName="selected"
          className="c1"
          isActive={[Function]}
          to="/questionnaire/1/design/2/3"
        >
          <Route
            path="/questionnaire/1/design/2/3"
          >
            <Link
              className="c1"
              replace={false}
              to="/questionnaire/1/design/2/3"
            >
              <a
                className="c1"
                href="/questionnaire/1/design/2/3"
                onClick={[Function]}
              >
                Builder
              </a>
            </Link>
          </Route>
        </NavLink>
      </Nav__StyledNavLink>
    </nav>
  </Nav__StyledNav>
</NavWithoutRouter>
`;
